<resources>
    <string name="app_name">EncrytionApp</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt">Encrypt</string>
    <string name="select_recipient">Select Recipient</string>
    <string name="message">Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="the_encryptor">The Encryptor</string>
    <string name="add_user">Add User</string>
    <string name="new_user">New User</string>
    <string name="name">Name</string>
    <string name="paste_code_here">Paste code here</string>

    <string name="enter_hash_code">Enter Hash Code</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="copy_button_image_content_description">contentDescriptionCopy</string>
    <string name="clear_button_image_content_description">contentDescriptionClear</string>
</resources>