<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4074F2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="607dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/the_encryptor"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/enter_message"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="#060606"
            android:backgroundTintMode="add"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textLongMessage|textMultiLine|textNoSuggestions|textCapSentences"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B6B6B6" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="10dp"
            android:text="@string/select_recipient"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textPersonName"
            android:text="WillBeReplacedByDropDown"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/encryptButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/encrypt" />

        <Button
            android:id="@+id/decryptButton"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:text="@string/decrypt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>